tests/semantic/stmt_builder/snapshots/r#mod__semantic__stmt_builder__local_let_building__local_const_definition_with_func_call.snap
---
source: tests/semantic/stmt_builder/local_let_building.rs
expression: "&test_ctx.prog_ctx.scope_registry"
---
scopes:
  0:
    parent: ~
    name_to_id: {}
    variables: []
    defined_names: []
    range:
      start: 0
      end: 0
  1:
    parent: ~
    name_to_id: {}
    variables: []
    defined_names:
      - do_something
      - main
    range:
      start: 0
      end: 0
  2:
    parent: 1
    name_to_id: {}
    variables: []
    defined_names: []
    range:
      start: 0
      end: 0
  3:
    parent: 1
    name_to_id:
      local: 0
    variables:
      - 0
    defined_names:
      - local
    range:
      start: 0
      end: 0
variables:
  0:
    name: local
    value_type:
      Primitive: Int
    def_val:
      kind:
        FuncCall:
          id: 0
          args: []
      value_type:
        Primitive: Int
      range:
        start: 0
        end: 0
    range:
      start: 0
      end: 0
    var_kind: LocalConst
global_scope_ids:
  0: 1
next_scope_id: 4
next_variable_id: 1
